--- a/OnTimeGCApi/OnTimeGCApi.csproj
+++ b/OnTimeGCApi/OnTimeGCApi.csproj
@@ -36,25 +36,33 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseResult.cs" />
-    <Compile Include="OnTimeGCApiClient.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Value\Calendars\Base.cs" />
+    <Compile Include="Value\Calendars\Calendars.cs" />
+    <Compile Include="Value\Calendars\Id.cs" />
+    <Compile Include="Value\Calendars\Item.cs" />
+    <Compile Include="Value\DatabaseInfo.cs" />
     <Compile Include="Value\Login\Base.cs" />
     <Compile Include="Value\Login\Global.cs" />
     <Compile Include="Value\Login\Login.cs" />
     <Compile Include="Value\Login\User.cs" />
     <Compile Include="Value\Logout\Base.cs" />
     <Compile Include="Value\Logout\Logout.cs" />
+    <Compile Include="Value\Profile.cs" />
     <Compile Include="Value\UsersAll\Base.cs" />
-    <Compile Include="Value\UsersAll\User.cs" />
+    <Compile Include="Value\User.cs" />
     <Compile Include="Value\UsersAll\UsersAll.cs" />
-    <Compile Include="Value\UsersAll\UserType.cs" />
-    <Compile Include="Value\Version\ApiDatabase.cs" />
-    <Compile Include="Value\Version\ApiLog.cs" />
+    <Compile Include="Value\UsersInfo\Base.cs" />
+    <Compile Include="Value\UsersInfo\UsersInfo.cs" />
+    <Compile Include="Value\UserType.cs" />
     <Compile Include="Value\Version\Base.cs" />
     <Compile Include="Utilities.cs" />
-    <Compile Include="Value\Version\ConfigDatabase.cs" />
     <Compile Include="Value\Version\Server.cs" />
     <Compile Include="Value\Version\Version.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
