Update Implement AppointmentCreate Implement AppointmentChange Implement AppointmentRemove Refactored data structure Fixed Line endings

--- a/OnTimeGCApi/OnTimeGCApi.csproj
+++ b/OnTimeGCApi/OnTimeGCApi.csproj
@@ -38,25 +38,31 @@
     <Compile Include="BaseResult.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Value\Calendars\Base.cs" />
+    <Compile Include="Value\AppointmentChange\AppointmentChange.cs" />
+    <Compile Include="Value\AppointmentChange\AppointmentChangeResult.cs" />
+    <Compile Include="Value\AppointmentCreate\AppointmentCreate.cs" />
+    <Compile Include="Value\AppointmentCreate\AppointmentCreateResult.cs" />
+    <Compile Include="Value\AppointmentRemove\AppointmentRemove.cs" />
+    <Compile Include="Value\AppointmentRemove\AppointmentRemoveResult.cs" />
+    <Compile Include="Value\Calendars\CalendarsResult.cs" />
     <Compile Include="Value\Calendars\Calendars.cs" />
     <Compile Include="Value\Calendars\Id.cs" />
-    <Compile Include="Value\Calendars\Item.cs" />
+    <Compile Include="Value\Calendars\CalendarItem.cs" />
     <Compile Include="Value\DatabaseInfo.cs" />
-    <Compile Include="Value\Login\Base.cs" />
+    <Compile Include="Value\EventType.cs" />
+    <Compile Include="Value\Login\LoginResult.cs" />
     <Compile Include="Value\Login\Global.cs" />
     <Compile Include="Value\Login\Login.cs" />
-    <Compile Include="Value\Login\User.cs" />
-    <Compile Include="Value\Logout\Base.cs" />
+    <Compile Include="Value\Logout\LogoutResult.cs" />
     <Compile Include="Value\Logout\Logout.cs" />
     <Compile Include="Value\Profile.cs" />
-    <Compile Include="Value\UsersAll\Base.cs" />
+    <Compile Include="Value\UsersAll\UsersAllResult.cs" />
     <Compile Include="Value\User.cs" />
     <Compile Include="Value\UsersAll\UsersAll.cs" />
-    <Compile Include="Value\UsersInfo\Base.cs" />
+    <Compile Include="Value\UsersInfo\UsersInfoResult.cs" />
     <Compile Include="Value\UsersInfo\UsersInfo.cs" />
     <Compile Include="Value\UserType.cs" />
-    <Compile Include="Value\Version\Base.cs" />
+    <Compile Include="Value\Version\VersionResult.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Value\Version\Server.cs" />
     <Compile Include="Value\Version\Version.cs" />
